# hotel-reservation-mlops

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
artifacts/models/: lgbm_model.pkl
hotel_reservation_mlops/components/: data_ingestion.py  data_preprocessing.py  model_training.py
hotel_reservation_mlops/config/: config.yaml  paths_config.py
hotel_reservation_mlops/utils/: common_functions.py
notebook/: notebook.ipynb
